changes on ganttChart

--- a/report.tex
+++ b/report.tex
@@ -4,11 +4,13 @@
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{pifont}
+\usepackage{pdflscape}
 \usepackage{url}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{fixltx2e}
 \usepackage{mathtools}
 \usepackage{lmodern}
+\usepackage{rotating}
 \usepackage{textcomp}
 \usepackage{booktabs}
 \usepackage[square,sort,comma,numbers]{natbib}
