--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -1,22 +1,74 @@
 %!TEX root = ../report.tex
 
+\begin{landscape}
+
 \section{Appendix} % (fold)
 \label{sec:attachments}
 
-Appendix files and refs will go here.
-Such as your thesis work scheduling. 
 
 \subsection{Appendix A - Work Scheduling Plan} 
 
-The next figure presents the Gantt Chart for this project.
+The next figure presents the Gantt Chart for this project. In table 6 we have a description of objectives for each task.
+
+
 
 \begin{figure}[h!]
 \centering
-\includegraphics[height=0.8\textheight]{img/GanttChart.png}
+\includegraphics[height=0.55\textheight]{img/GanttChart.png}
 \caption{Gantt Chart for the project.}
 \end{figure}
 
-\vspace{10mm}
+\end{landscape}
+
+\newpage
+
+
+
+\begin{table}[h!]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{Task ID}} & \multicolumn{1}{c|}{\textbf{Objectives}} \\ \hline
+\rowcolor[HTML]{68CBD0} 
+\textbf{1} & \textbf{Proposal} \\ \hline
+2 & Prepare project presentation and discussion. \\ \hline
+\rowcolor[HTML]{68CBD0} 
+\textbf{3} & \textbf{Process Framework Design} \\ \hline
+4 & \begin{tabular}[c]{@{}l@{}}Selection of high level processes to include in framework; \\ Definition of activities for each process; \\ Definition of objectives, inputs and outputs of each activity;\end{tabular} \\ \hline
+5 & \begin{tabular}[c]{@{}l@{}}Definition of artifacts related to inputs and outputs of each activity; \\ Artifacts design and production;\end{tabular} \\ \hline
+6 & \begin{tabular}[c]{@{}l@{}}Definition of a responsibility structure to support the processes;\\ Responsibility assignment;\end{tabular} \\ \hline
+7 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Necessary changes definition; \\ Evaluation Report;\end{tabular} \\ \hline
+8 & \begin{tabular}[c]{@{}l@{}}Iteration on Processes modelling, Artifact definition and \\ responsibility structure definition tasks;\end{tabular} \\ \hline
+9 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Necessary changes definition; \\ Evaluation Report;\end{tabular} \\ \hline
+10 & \begin{tabular}[c]{@{}l@{}}Iteration on Processes modelling, Artifact definition and responsibility\\ structure definition tasks; \\ Final proposal for the Process Framework;\end{tabular} \\ \hline
+\rowcolor[HTML]{68CBD0} 
+\textbf{11} & \textbf{Logical Application Architecture} \\ \hline
+12 & \begin{tabular}[c]{@{}l@{}}Definition of PPM solution's features to include into the architecture; \\ Definition of input activities from process framework to PPM solution; \\ Definition of outputs from PPM Solution;\end{tabular} \\ \hline
+13 & \begin{tabular}[c]{@{}l@{}}Definition of ITSM solution's features to include into the architecture; \\ Definition of,input activities from process framework to ITSM solution; \\ Definition of outputs from ITSM Solution;\end{tabular} \\ \hline
+14 & \begin{tabular}[c]{@{}l@{}}Definition of ITSM and PPM solution's inputs from the processes framework; \\ Integration with application architectures already present in the organization; \\ Definition of application architecture outputs; \\ Definition of necessary infrastructure;\end{tabular} \\ \hline
+15 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Necessary changes definition; \\ Evaluation Report;\end{tabular} \\ \hline
+16 & \begin{tabular}[c]{@{}l@{}}Iteration on ITSM and PPM solutions' architecture;\\ Final proposal for the Logical Application architecture;\end{tabular} \\ \hline
+\rowcolor[HTML]{68CBD0} 
+\textbf{17} & \textbf{Demonstration} \\ \hline
+18 & \begin{tabular}[c]{@{}l@{}}Process framework and Logical Application Architecture presentation to stakeholders;\\ Process framework application proposal to the organization;\\ Logical application architecture integration on organization proposal;\end{tabular} \\ \hline
+19 & Mapping between responsibility structure defined and demonstration's organization structure; \\ \hline
+20 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Evaluation Report;\end{tabular} \\ \hline
+\rowcolor[HTML]{68CBD0} 
+\textbf{21} & \textbf{Evaluation} \\ \hline
+22 & \begin{tabular}[c]{@{}l@{}}Interview with the main stakeholder; \\ Evaluation Report;\end{tabular} \\ \hline
+23 & \begin{tabular}[c]{@{}l@{}}Evaluation using Moody and Shanks Framework; \\ Results analysis and reporting;\end{tabular} \\ \hline
+\rowcolor[HTML]{68CBD0} 
+24 & \textbf{Dissertation} \\ \hline
+25 & \begin{tabular}[c]{@{}l@{}}Write dissertation;\\ Dissertation presentation;\end{tabular} \\ \hline
+\end{tabular}
+}
+\vspace{2mm}
+\caption{Tasks and objectives for the project.}
+\label{my-label}
+\end{table}
+
+\newpage
 
 \subsection{Appendix B - COBIT 5 Processes by domain} 
 
