--- a/sections/architecture.tex
+++ b/sections/architecture.tex
@@ -6,32 +6,37 @@
 
 \section{Solution's Architecture Proposal}
 
-Considering this project's problem and the objectives presented in problem contextualization section, we want to develop a process framework for project and maintenance management to be applied to an Information Systems administration. We provided, in Related Work section, a state of the art in several frameworks for IT governance and management, as well as international standards, building a knowledge base to start planning and designing the processes.\par
-Taking in account the complexity of some frameworks presented, like COBIT, and also the problem's scope and the solution time-frame, we need to conduct an analysis of the knowledge we will use from each framework or standard. We will use ISO/IEC 12207, presented in section 5.1, to define which types of processes we will consider for this project, defining next the frameworks and standards we will consider as reference for each type of processes. As long as processes need supporting artifacts and a responsibility structure, this references also support this needs, presenting some suggestions of how responsibilities are addressed for each process and what artifacts are needed for a correct implementation.\par
-Since we are also looking for a logical application architecture, we will provide a deeper analysis on the solutions present in section 6, narrowing down the available solutions to provide the features more important for this project, in order to reach an logical application architecture that is able to fully support our process framework. We will only consider proprietary software taking in account the initial requirements and constraints presented in the project proposal.\par
-As long as this project is aligned with a real-case scenario for an organization, we will take design decisions considering the stakeholders for this project, specially when dealing with the choice of the type of processes to consider and the solutions chosen for integrating the logical application architecture. This organization will also provide us ways to demonstrate our solution's suitability, allowing us to achieve the demonstration and evaluation step of the DSRM process applied for this project.\par
+Considering this project's problem and the objectives presented in problem contextualization section, we want to develop a process architecture for project and maintenance management to be applied to an Information Systems administration, supported by a logical application architecture.\par
+As long as this project is aligned with a real-case scenario for an organization, we will take the main design decisions considering the stakeholders' needs and concerns for this project, namely the processes to consider for the architecture development and the solutions chosen for integrating the logical application architecture. It will also provide a demonstration scenario for our solution, allowing us to achieve the demonstration and evaluation steps of the DSRM process.\par 
 
 
 
+\subsection{Real-case Scenario}
 
-\subsection{Process Framework}
+The real-case organization scenario will provide constraints and assumptions for this project, made available by the stakeholders. Being so, some design decisions were made considering specific requirements from this scenario.\par
+We are dealing with an organization from the utilities sector of Business (Energy), composed by a unique administration for Applications (software) area. This administration will receive two types of requests: project execution and evolving maintenance requests.\par
+Considering the stakeholders for this project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization administration (Sponsor of this project), the financial and logistic departments, and the Technology area, composed by the Information Systems department (Project execution and Maintenance departments). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
+Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolving maintenance requests are filtered by a Help-Desk service, Wherefore only the major changes requests arrive to the evolving maintenance department.\par
+A project only enters in production phase after approval from the maintenance department. When in production phase, project belongs to the maintenance department. It can, accordingly with a strategical plan previously defined, outsource the maintenance's implementation, being only responsible for its management.\par
+This real-case scenario will allow us to extract some requirements and also take design decisions accordingly to stakeholders' needs and concerns, deciding which processes must be included in the processes architecture and the ones we should not focus, to reduce unnecessary complexity.\par
 
-To start designing our processes, we need first to define what processes we will consider to be in the scope of this project. For this, and taking as reference ISO/IEC 12207, detailed in section 5.1, that standardizes the processes for the whole life cycle of software, we will present the areas we will address and the reasons why we do not do it for the others.\par
-The two main areas to consider are governance and management processes. Considering the extensibility and complexity of both, we could not focus on the two, giving the time-frame available. Being so, we decided, accordingly with the stakeholders, to not detail governance processes. Areas focused on organization strategy or project portfolio will not be addressed for this project. Instead, we will consider that this subjects are already clearly defined by the organization, being our responsibility designing processes that comply with them. 
-Despite this, there are governance processes that will have direct influence on the subjects covered by this thesis, namely risk, budget and quality management. These subjects will be addressed by this project considering a more operational approach. We will consider that organization strategy for this areas is already defined, being our mission design processes that implement and ensure this strategy in practice.\par
-Related to processes modeling, we are considering the use of BPMN 2.0 (Business Process Model and Notation). It provides a graphical representation for specifying business processes, being the standard for business processes modeling.\par
+
+\subsection{Process Architecture}
+
+Taking as reference ISO/IEC 12207, detailed in section 5.1, that standardizes the processes for the whole life cycle of software, we will present the areas we will address in our processes architecture and the reasons for not considering others.\par
+The two main processes areas we can address are governance and management processes. Considering the extensibility of both, we could not focus on the two, giving the time-frame available. Being so, we decided, accordingly with the stakeholders, to not detail governance processes. This type of processes need maturation and organization's insight, being too much complex in the scope of this project. Areas as organization strategy or project portfolio will not be addressed.\par 
+Despite this, there are governance processes that will have direct influence on the subjects covered by this project, namely risk, budget and quality management. These subjects will be addressed considering a more operational approach, assuming that organization's strategy for this areas is already defined, being our mission design processes that implement it in practice.\par
+We are considering the use of BPMN 2.0 (Business Process Model and Notation) for processes modeling. It provides a graphical representation for specifying business processes, being the standard for business processes modeling. Due to its large adoption by organizations for business processes' specification, it is the best option for designing a processes architecture. \par
 
 
 \subsubsection{Processes definition}
 
-
-The areas of interest were chosen based on stakeholders' needs for this project. As long as it is aligned with a real-case organization, we had to proceed to interviews with stakeholders as a way to define the problem, namely the areas of interest we need to cover. This areas were chosen in agreement with the two parties involved in this project, bu it can be changed during project execution.\par
-Our idea with this project is to provide a more general process framework for project and maintenance management, but that would be applicable to an organization particular scenario. Based on this, the processes we will consider are aligned with this objective, being, in our shared opinion, the most important to consider in this scenario. Also, more areas can be covered in the future, if we consider it is a added value for this framework.  
-In figure 32 we can observe the areas of interest for this project highlighted from the ISO/IEC 12207 international standard. Groups of processes directly related to governance are not considered for this project, as well as the Agreement processes and Organizational Project-Enabling processes.\par
-Technical Processes and Software Implementation processes are also not considered in the scope, because we will assume that project's implementation is outsourced, being responsibility of a third-party. In light of this, processes presented in Technical and Software Implementation processes groups are not relevant for the organization, although they are fundamental for the third-party that will implement the project. Despite this assumption, the organization itself has a complete process for project management, that is different from the third-party project. Aspects like project calendar, deliveries and control are done by the two entities by different perspectives.\par
-Software Reuse Processes group will not be considered for this project because it is not considered as a theme of interest for it, being also not related with the objectives we purpose.\par
-We will consider the Project processes and the Software Support processes, both directly related to project and maintenance management. In addition to the processes in Project processes group, we will also consider Capacity Management, Issues Management,Financial Management and Document Management as processes belonging to this group.\par
-Regarding Software Support Processes, we will consider Software Documentation Management, Software Configuration Management and Software Validation processes.\par
+Using an interview approach with the stakeholders for a more deeper analysis on the problem scope, we defined the areas of interest we need to cover. This areas can change during project execution phases, since requirements are volatile and can be changed. Also, more areas can be covered in the future, if we consider it brings an added value for this architecture.\par
+In figure 32 we can observe the processes of interest for this project highlighted from the ISO/IEC 12207 international standard. As explained before, processes directly related to governance areas are not considered for this project due to its increased complexity. As consequence, Agreement processes and Organizational Project-Enabling processes are outside the scope for this project.\par
+Technical Processes and Software Implementation processes are also not considered in the scope, based on the requirements presented by the stakeholders and the organization scenario provided. As stated in section 7.1, we will assume these processes will be either outsourced, or managed by the organization according to already defined processes for that purpose.\par
+Software Reuse Processes are also outside the scope of this project. It is a shared opinion of stakeholders that this processes are not related to this project's problem and would only increase its complexity without adding any value.\par
+The processes we will address in detail are the Project processes and the Software Support processes, directly related to project and maintenance management. It constitutes the core of this project and is fundamental for establishing the proposed processes architecture.\par
+Regarding Project processes, and accordingly to the concerns extracted from the stakeholders' interview, we will consider all processes with exception of configuration management process and measurement process, that are not in the scope of interest for this particular project. Considering Software Support Processes, we will only address the Software Configuration Management process and the Software Validation process.\par
 
 
 \begin{figure}[h!]
@@ -40,13 +45,13 @@ Regarding Software Support Processes, we will consider Software Documentation Ma
 \caption{Processes areas considered for this project. Adapted from \cite{ISO12207}.}
 \end{figure}
 
-Capacity Management, issues Management, Financial Management and Document Management are process areas that are not clearly addressed by ISO/IEC 12207, but they need to be taking in account considering stakeholders' needs.\par
-Capacity Management, as stated in \cite{itilSD}, ``ensure that cost-justifiable IT capacity in all areas of IT always exists and is matched to the current and future agreed needs of the business, in a timely manner.''. It is point were all performance and capacity subjects are dealt, considering resources and services itself. Capacity management is focused on two operations: balancing costs against resources needed and balancing supply against demand.\par
-Capacity Management is divided in three main areas: Business Capacity Management (business needs and plans' translation into requirements for service and IT infrastructure), Service Capacity Management (management, control and prediction of performance and capacity of IT services operation) and Component Capacity Management (management, control and prediction of the performance, utilization and capacity of individual IT technology components).\par
-Issues Management is the process of identifying and resolving issues, as staff, supplier, technical or material problems. Many times confused with risks, issues have a more unpredictable profile. They can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
-As stated in \cite{itilSS}, ``Financial Management provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''. As the main areas for IT Financial Management we have Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our framework, in order to only provide the needed financial activities.\par
-Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. This processes are also related to the supporting artifacts we want to develop and need to be taken in account to achieve success for the whole processes.\par
-In table 2 is presented a table with the processes group we will consider for this project and a description of some activities each process intents to implement.
+Apart from processes presented by ISO/IEC 12207, the stakeholders presented specific concerns regarding processes on Capacity Management, Issues Management, Financial Management and Document Management. They need to be taking in account on this project's scope considering stakeholders' needs.\par
+Capacity Management, as stated in \cite{itilSD}, ``ensure that cost-justifiable IT capacity in all areas of IT always exists and is matched to the current and future agreed needs of the business, in a timely manner.''. Deals with performance achievement and capacity availability, considering resources and services itself. It tries to balance costs against resources needed and supply against demand.\par
+The main areas are Business Capacity Management (requirements for service and IT infrastructure), Service Capacity Management (performance and capacity management of IT services operation) and Component Capacity Management (performance, capacity and utilization management of individual IT technology components).\par
+Issues Management is the process of identifying and resolving issues, as staff, suppliers, technical or material problems. Many times confused with risks, issues have a more unpredictable profile. They can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
+Financial Management, as stated in \cite{itilSS}, ``provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''. Core areas for IT Financial Management are Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our architecture, in order to remove unnecessary complexity.\par
+Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. This processes are also related to the supporting artifacts we want to develop.\par
+In table 2 we present the processes we will consider for this project and a description of some activities each process implements.
 
 \begin{table}[h!]
 \centering
@@ -75,8 +80,8 @@ In table 2 is presented a table with the processes group we will consider for th
 
 \subsubsection{Processes Mapping to frameworks}
 
-In this section we will present how each one of the processes in the scope for this project are addressed and mapped into the frameworks and standards presented in section 4 and 5. This will provide us an initial guidance on how we should approach the problem, discovering what objectives are already covered by the frameworks and which ones need more original work.\par
-Our objective is to use only the important aspects for this project, reducing the complexity of implementing a complete framework for the organization. In table 3 we present the mapping between each processes group in the scope for this project with the framework or standard that covers some aspects for it:\par
+In this section we will present how each one of the processes in the scope for this project is addressed and mapped into the frameworks and standards presented in section 4 and 5. This will provide us an initial guidance on how we should approach the problem, analyzing what objectives are already covered by the frameworks and which ones need more original work.\par
+Our objective is to use only the important knowledge from sections 4 and 5 for this project, reducing the complexity of implementing a complete framework for the organization. In table 3 we present the mapping between each processes group in the scope for this project with the framework or standard that covers some aspects for it:\par
 
 \begin{table}[h!]
 \centering
@@ -105,25 +110,26 @@ Our objective is to use only the important aspects for this project, reducing th
 
 \subsubsection{Processes Supporting artifacts}
 
-Considering the framework we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the inputs and outputs for activities in each process. For this, we will provide, in conjunction with the processes framework, all artifacts needed to support it, clearly defining its purpose, content and participants.\par
-This artifacts will be defined during the designing of the process framework. The frameworks and standards previously presented define some of them,  being our work to address new artifacts that are not already covered.\par
+Considering the processes architecture we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will provide all artifacts needed, clearly defining its purpose, content and participants.\par
+This artifacts will be defined during the designing of the process architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
 
 \subsubsection{Responsibility Structure}
 
-The developed framework needs to have an inherent responsibility structure, defining the processes' participants accounted for decisions and activities. This structure is particularly important when considering we are dealing with a real-case organization, having an organizational structure already defined and for which our processes should be applied.\par
+The developed architecture needs to have an inherent responsibility structure, defining the processes' participants accounted for decisions and activities. This structure is particularly important when considering we are dealing with a real-case organization, having an organizational structure already defined and for which our processes should be applied.\par
 For designing this responsibility structure we will consider the work already done in responsibility assignment for the frameworks and standards previously presented. Despite that, we need also to have some original work on this area, considering we are not implementing directly any of those frameworks. This work will be accomplished during the processes' design and taking in account the common responsibility structures on IT organizations.\par 
 
 \subsection{Logical Application Architecture}
 
-A proposal for a logical application architecture is one of the objectives of this project, being important to support the processes framework. To achieve this, we evaluated a set of PPM and ITSM Solutions available in the market with the objective of achieving a proposal of applications that can be a part of this architecture.\par
+A proposal for a logical application architecture is one of the objectives of this project, being important to support the processes architecture. To achieve this, we evaluated a set of PPM and ITSM solutions available in the market with the objective of achieving a proposal of applications that can be a part of this architecture.\par
+We will only consider proprietary solutions, due to explicit requirements from the stakeholders. This was a precondition that we did not take in account in the state of the art on section 6 but that in this phase will restrict our PPM and ITSM solutions' proposal.\par 
 For evaluation purposes, we used Gartner and Forrester research, presented in section 6, that allow us to independently evaluate how these tools stand a position in the PPM and ITSM Market and also what are the solutions more complete in terms of features and capabilities.\par
 In this section we will present the solutions we consider the best for our objectives, being part of a proposal for the project's stakeholders. After deciding what solution we will consider for this project, we need to design a logical application architecture, describing how processes are supported and integrated.\par
 
 \subsubsection{PPM Tools}
 
-For PPM solutions, that we evaluate in section 6.3, we used the Magic Quadrant , the MarketScope and the Forrester Wave methodologies for evaluation.\par
-In Magic Quadrant results, that presents how well solutions' providers conform with market needs, we will just consider the leaders quadrant, composed by Planview, Compuware, CA, HP, Oracle and Microsoft. Planview and CA are the suppliers with the best results but are closely followed by the rest. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantPPM}.\par
-In MarketScope results, that presents how well solutions deal on emerging markets with changing requirements, we will only consider the solutions with strong positive and positive ratings. This method is particular important in this area, because PPM solutions are facing market changes, looking more for Cloud based solutions in the future. As well as on magic Quadrant, Planview and CA Techncologies present the best results with strong positive ratings. The other solutions we are considering obtained positive rating.\par
+For PPM solutions, that we evaluate in section 6.3, we used the Magic Quadrant, the MarketScope and the Forrester Wave methodologies for evaluation.\par
+In Magic Quadrant results, that performs an evaluation of the PPM solutions' providers adequacy to the market, we will just consider the leaders quadrant, composed by Planview, Compuware, CA, HP, Oracle and Microsoft. Planview and CA are the suppliers with the best results but are closely followed by the rest. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantPPM}.\par
+In MarketScope results, that presents how solutions are prepared to deal with markets that constantly change in terms of new requirements, we will only consider the solutions with strong positive and positive ratings. This method is particular important in this area, because PPM solutions are facing market changes, looking more for Cloud based solutions in the future. As well as on magic Quadrant, Planview and CA Techncologies present the best results with strong positive ratings. The other solutions we are considering obtained positive rating.\par
 For the Forrester Wave results, that evaluates providers by criteria and respective weightings, we will consider the two models explained in section 6.3, the above-the-line and below-the-line. For the first one, the leaders quadrant is composed by Planview, CA Technologies, HP and Daptiv. All presents good results but is CA Technologies who is the most complete provider, in terms of current offering, strategy and market presence. Other providers present better results in some of this criteria but are substantially worse in others. For the below-the-line evaluation, we have CA Technologies and Planview very close to each other and HP with an excellent result in strategy criteria. Microsoft, Rally and Daptiv are also part of the leaders, but with results slightly worse.\par
 In table 3 we can observe the PPM Tools Evaluation results. In green we have the solutions we consider the best for this project taking in account the evaluation results. We also present the alternatives in orange. CA Technologies with CA Clarity PPM and Planview with Planview Enterprise are the solutions we will purpose for the PPM Tool to consider for this project.
 
@@ -157,8 +163,8 @@ In table 3 we can observe the PPM Tools Evaluation results. In green we have the
 \subsubsection{ITSM Tools}
 
 For ITSM solutions, that we evaluated in section 6.4, we used the Magic Quadrant , the Critical Capabilities and the Forrester Wave methodologies for evaluation.\par
-In Magic Quadrant results, that presents how well solutions' providers conform with market needs, we will just consider the leaders and challengers quadrants, composed by ServiceNow and BMC Software for the leaders and Cherwell and CA Technologies for challengers. ServiceNow is the best provider in terms of ability to execute with some advantage to concurrency but really close of BMC Software in terms of completeness of vision. Cherwell Software and CA Technologies present a considering lower result for completeness of vision considering the leaders quadrant. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantITSM}.\par
-In Critical Capabilities results, we will only consider the High-Maturity, Digital Workplace and Total ITSM Use Cases. We will also only consider the solutions provided by the suppliers in the leaders and challengers quadrants presented by Gartner. In all the use cases considered, BMC Remedy ITSM Suite and ServiceNow IT Service Automation suite have the higher scores, being followed by some distance by CA Service Management and Cherwell Software Service Management.\par
+In Magic Quadrant results we will just consider the leaders and challengers quadrants, composed by ServiceNow and BMC Software for the leaders and Cherwell and CA Technologies for challengers. ServiceNow is the best provider in terms of ability to execute with some advantage to concurrency but really close of BMC Software in terms of completeness of vision. Cherwell Software and CA Technologies present a considering lower result for completeness of vision considering the leaders quadrant. A deeper analysis on strengths and cautions presented by Gartner for each one of this solutions is presented in \cite{magicQuadrantITSM}.\par
+In Critical Capabilities results, we will only consider the High-Maturity, Digital Workplace and Total ITSM Use Cases, the ones that are more adequate to our objectives and to the organization's scenario. We will also only consider the solutions provided by the suppliers in the leaders and challengers quadrants presented by Gartner. In all the use cases considered, BMC Remedy ITSM Suite and ServiceNow IT Service Automation suite have the higher scores, being followed by some distance by CA Service Management and Cherwell Software Service Management.\par
 For the Forrester Wave results, we have Cherwell Software and Service Now as the leaders, very close to each other and with a very good result in terms of market presence. BMC Software and CA Technologies are considered Strong Performers, but at some distance of the other two. Forrester establishes big differences between the two leaders providers and the two strong contenders in terms of the three criteria considered.\par
 In table 4 we can observe the ITSM Tools Evaluation results. In green we have the solution we consider the best for this project taking in account the evaluation results. ServiceNow with ServiceNow IT Service Automation is the solution we will purpose for the ITSM Tool to consider for this project. We also present other alternatives in orange. It should be taken special attention to CA Technologies tool as alternative solution if we consider the CA Technologies PPM tool due to easier integration between the PPM and ITSM tools.\par
 
@@ -187,13 +193,7 @@ In table 4 we can observe the ITSM Tools Evaluation results. In green we have th
 
 \vspace{100mm}
 
-\subsection{Demonstration Proposal}
 
-For demonstrating our solution we will apply our process framework and logical application architecture to a real-case organization, from the utilities sector of business (Energy). This organization is composed by a unique administration for applications (software) area. This administration will receive two types of requests: project execution and evolving maintenance requests. All the assumptions were made available from the stakeholder for this project, using an interview approach.\par
-Considering the stakeholders for this demonstration project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization administration (sponsor), the financial department and logistic department, and the Technology area, composed by the Information Systems department (Project execution and Maintenance project managers and leaders). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
-Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolving maintenance requests are filtered by a Help-Desk service, Wherefore only the Major Changes requests arrive to the evolving maintenance department.\par
-A project only enters in production phase after approval from the maintenance department. When in production phase, project belongs to the maintenance department. Maintenance department can, accordingly with a strategical plan defined, outsource the maintenance implementation, being only responsible for its management.\par
-This demonstration proposal is a specialization application of our process framework but was considered during its planning, reason why some processes were not considered to make part of the framework, because they would introduce too much complexity considering the application purposes.\par
 
 
 
