figures and tables revision

--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -8,7 +8,7 @@
 
 \subsection{Appendix A - Work Scheduling Plan} 
 
-The next figure presents the Gantt Chart for this project. In table 6 we have a description of objectives for each task.
+The next Figure presents the Gantt Chart for this project. In Table 6 we have a description of objectives for each task.
 
 
 
@@ -72,7 +72,7 @@ The next figure presents the Gantt Chart for this project. In table 6 we have a 
 
 \subsection{Appendix B - COBIT 5 Processes by domain} 
 
-The next figure presents the management and governance processes from COBIT 5 process framework, presented by domain.
+The next Figure presents the management and governance processes from COBIT 5 process framework, presented by domain.
 
 \begin{figure}[h!]
 \centering
