--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -28,12 +28,13 @@ For quality factors, that define how can we measure the quality of our model, th
 \item \textbf{Completeness} refers to whether the data model contains all user requirements.
 \item \textbf{Simplicity} means that the data model contains the minimum possible entities and relationships.
 \item \textbf{Flexibility} is defined as the ease with which the data model can cope with business and/or regulatory change.
-\item \textbf{Integration} is defined as the consistency of the data model with the rest of the organisation's data.
+\item \textbf{Integration} is defined as the consistency of the data model with the rest of the organization's data.
 \item \textbf{Understandability} is defined as the ease with which the concepts and structures in the data model can be understood.
 \item \textbf{Implementability} is defined as the ease with which the data model can be implemented within the time, budget and technology constraints of the project.
 \end{itemize}
 
-For each quality factor, a set of metrics are presented for evaluation in \cite{moody1998metrics}. The objective of this metrics is to refine these quality factors in specific and concrete measures for evaluating the quality of data models. 
+For each quality factor, a set of metrics are presented for evaluation in \cite{moody1998metrics}. The objective of this metrics is to refine these quality factors in specific and concrete measures for evaluating the quality of data models.\par
+Our objective is to use this framework on our final solution, analyzing the metrics presented in \cite{moody1998metrics} to evaluate each quality factor and how it is achieved in our solution, providing a well-defined evaluation method for this project.\par
 
 \subsection{Interviews}
 
