--- a/sections/researchMethodology.tex
+++ b/sections/researchMethodology.tex
@@ -27,6 +27,6 @@ This methodology has three main objectives: provide a nominal process for the co
 \end{figure}
 
 
-In figure 1 we present the mapping between the DSRM process and this project research methodology. The next sections follow the methodology steps: Section 3 (Problem contextualization) will define problem context and its importance. In section 4 and 5 we present the state of the art in frameworks and standards for management and governance processes. In section 6 we present the state of the art for market solutions on ITSM and PPM tools. In section 7 we make a solution and demonstration proposal being section 8 reserved for the evaluation methodology.\par
+In Figure 1 we present the mapping between the DSRM process and this project research methodology. The next sections follow the methodology steps: Section 3 (Problem contextualization) will define problem context and its importance. In section 4 and 5 we present the state of the art in frameworks and standards for management and governance processes. In section 6 we present the state of the art for market solutions on ITSM and PPM tools. In section 7 we make a solution and demonstration proposal being section 8 reserved for the evaluation methodology.\par
 
 
