--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -34,7 +34,7 @@ As stated by ISACA \cite{2012cobit},\textit{``COBIT 5 provides a comprehensive f
 \end{itemize}
 
 
-It also defines seven enablers, explained by COBIT as factors that, individually and collectively, influence whether governance and management over enterprise will work or not.Figure 2 presents the COBIT 5 enablers previous defined and how they relate among themselves in terms of its importance for the organization. Each enabler has stakeholders, a set of goals, a life cycle and can be defined good practices for each one.\par
+It also defines seven enablers, explained by COBIT as factors that, individually and collectively, influence whether governance and management over enterprise will work or not. Figure 2 presents the COBIT 5 enablers previous defined and how they relate among themselves in terms of its importance for the organization. Each enabler has stakeholders, a set of goals, a life cycle and can be defined good practices for each one.\par
 
 \begin{figure}
 \centering
@@ -50,9 +50,9 @@ It also defines seven enablers, explained by COBIT as factors that, individually
 \caption{COBIT 5 domains. Extracted from \cite{2012cobit}.}
 \end{figure}
 
-Considering figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
+Considering Figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
 All processes for management and governance are presented in the Appendix B and all the implementation details explained in COBIT 5: Enabling Processes\cite{2012cobitEP}, a detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation and governance and management practices.\par
-Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards.\par
+Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In Figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards.\par
 
 \begin{figure}[h!]
 \centering
@@ -117,7 +117,7 @@ To conduct an CMMI appraisal, the organization must follow the appraisal Require
 
 CMMI can be used by COBIT for process improvement purposes. Considering COBIT as a framework for governance and management processes, providing guidance and control, it is fundamental for it to also consider improvement as an important part of this processes. Also, and considering COBIT application for this project, we will apply its guidance on a real-case organization, that deals with suppliers and other stakeholders, many times interested in the processes level of maturity conducted by the organization, in accordance to CMMI levels. Considering this, its fundamental for COBIT application to consider the CMMI body of knowledge and application.\par
 COBIT 5 presents an process capability model, based on ISO/IEC 15504 Software Engeneering - Process Assessment standard, presented in the next subsection. This standard has many similarities and guidelines presented by CMMI, but is not as widely accepted as this one. In fact, it has appeared after CMM, that was been replaced by the CMMI, and cannot face with some benefits CMMI presents.\par
-COBIT 5 also considers CMMI as a related framework, as stated in figure 4, and identifies, as stated in \cite{2012cobit}, that some areas and domains are covered by CMMI, namely application-building and acquisition-related processes in the Build And Acquire domain and some organizational and quality-related processes from the Acquire, Plan and Organize domain.\par
+COBIT 5 also considers CMMI as a related framework, as stated in Figure 4, and identifies, as stated in \cite{2012cobit}, that some areas and domains are covered by CMMI, namely application-building and acquisition-related processes in the Build And Acquire domain and some organizational and quality-related processes from the Acquire, Plan and Organize domain.\par
 
 
 \subsubsection{COBIT 5 process capability model}
@@ -210,7 +210,7 @@ The main objective to include ITIL knowledge for this project is to provide a co
 
 The Guide to the Project Management Body of Knowledge provides guidance on individual projects management and the concepts inherited to it. To achieve this, it presents the processes involved in the project management and project life cycles.\cite{pmbok5}\par
 This guide is considered by many professionals in all business management areas as the main reference for processes and good practices in project management, because it compiles a set of knowledge that is applicable to a majority of the projects in most of the contexts, bringing value to all organizations and managers that use it as a reference.\par 
-The processes are presented in figure 5, relating them with the knowledge area they belong. Each group of processes is related with the life cycle of a project, being also grouped in five categories: Initiating, Planing, Executing, Monitoring and Control and Closing, directly related to the phase they are applied on the life cycle. For each process, it is presented the inputs, tools, techniques and outputs that are required to successfully implement it.\par
+The processes are presented in Figure 5, relating them with the knowledge area they belong. Each group of processes is related with the life cycle of a project, being also grouped in five categories: Initiating, Planing, Executing, Monitoring and Control and Closing, directly related to the phase they are applied on the life cycle. For each process, it is presented the inputs, tools, techniques and outputs that are required to successfully implement it.\par
 
 \begin{figure}
 \centering
@@ -238,7 +238,7 @@ For other standards more general to all frameworks we will present the ISO 31000
 \subsection{ISO/IEC 12207}
 
 As described by ISO/IEC 12207:2008 \cite{ISO12207}, it \textit{``establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.''}. The main objective of this standard is to present standardized processes that will make easier the communication among all stakeholders in the software product life cycle.\par
-This standard groups the processes to be performed during the life cycle of a software project in seven groups . It presents, for each process, its objectives and expected results as well as the necessary activities to implement it. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure 6.\par
+This standard groups the processes to be performed during the life cycle of a software project in seven groups . It presents, for each process, its objectives and expected results as well as the necessary activities to implement it. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in Figure 6.\par
  
 \begin{figure}[h!]
 \centering
@@ -247,7 +247,7 @@ This standard groups the processes to be performed during the life cycle of a so
 \end{figure}
 
 It may be used standalone or jointly with ISO/IEC 15288\cite{ISO15288}, an international standard for system life cycle processes, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504\cite{ISO15504}, a set of technical standards documents for the computer software development processes assessment.\par
-This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding of its scope. We will use this standard, specifically figure 6, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
+This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding of its scope. We will use this standard, specifically Figure 6, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
 
 
 \subsection{ISO/IEC 20000}
@@ -299,7 +299,7 @@ This standard will be important for our project considering we deal with process
 \subsection{ISO 31000}
 
 ISO 31000 is a set of standards related to risk management. ISO 31000:2009, Risk management - Principles and guidelines, provides principles, framework and a process for managing risk. It can be used by any organization independently of its context of operation (size, sector, activity). As presented by this standard \cite{ISO31000}, \textit{``Using ISO 31000 can help organizations increase the likelihood of achieving objectives, improve the identification of opportunities and threats and effectively allocate and use resources for risk treatment.''}.\par
-In figure 7, we can observe the purposed framework by ISO 31000:2009, used to implement risk management on the management system of the organization. Many organizations have already frameworks for implementing risk management, distinct from ISO 31000, but that can be evaluated and reviewed against this international standard in order to check its suitability. In figure 8 are presented the processes for Risk management implementation.\par
+In Figure 7, we can observe the purposed framework by ISO 31000:2009, used to implement risk management on the management system of the organization. Many organizations have already frameworks for implementing risk management, distinct from ISO 31000, but that can be evaluated and reviewed against this international standard in order to check its suitability. In Figure 8 are presented the processes for Risk management implementation.\par
 
 \begin{figure}[h!]
 \centering
@@ -337,7 +337,7 @@ Considering this project objectives, we will use the following methodologies fro
 
 \subsubsection{Gartner Magic Quadrant}
 
-The objective of the Gartner Magic Quadrant\cite{GartnerMagicQuadrant} is to provide a wide-angle view of the relative positions of a specific market's competitors. It helps on analyzing how well technology providers are executing against their stated vision, presenting a graphical competitive positioning (see figure 9) of four types of technology providers, in growing markets with providers differentiation. The four types of technology providers are:
+The objective of the Gartner Magic Quadrant\cite{GartnerMagicQuadrant} is to provide a wide-angle view of the relative positions of a specific market's competitors. It helps on analyzing how well technology providers are executing against their stated vision, presenting a graphical competitive positioning (see Figure 9) of four types of technology providers, in growing markets with providers differentiation. The four types of technology providers are:
 
 \begin{itemize}
 \item \textbf{Leaders} - Execute well against their current vision and are well positioned for tomorrow.
@@ -395,7 +395,7 @@ This quadrant focuses on the PPM market, where Gartner defines the core function
 \item \textbf{EPPM} - Enterprise PPM.
 \end{itemize}
 
-The Magic Quadrant document\cite{magicQuadrantPPM} also provides some insight on the main challenges and problems the area faces actually and some advices, considerations and definitions for professionals in the area. Considering our purposes, in figure 10 we have the Magic Quadrant for IT Project and Portfolio Management from June 2010, and in figure 11 and 12 we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
+The Magic Quadrant document\cite{magicQuadrantPPM} also provides some insight on the main challenges and problems the area faces actually and some advices, considerations and definitions for professionals in the area. Considering our purposes, in Figure 10 we have the Magic Quadrant for IT Project and Portfolio Management from June 2010, and in Figure 11 and 12 we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
 
 \begin{figure}[h!]
 \centering
@@ -433,7 +433,7 @@ This marketScope includes on-premises and cloud-hosted IT project portfolio mana
 As explained by Gartner in \cite{MarketScopePPM} \textit{``On-premises and cloud-hosted IT PPM providers offer deployment options, allowing their customers to deploy a dedicated instance of their IT PPM applications on-site at the customer's facility or in the cloud in a hosting environment offered by the provider as a service''}.\par
 For larger organizations, IT PPM solutions are being migrated to SaaS solutions, either for choosing providers presented on this marketScope or by providers presented in the Gartner's ``Magic Quadrant for Cloud- Based Project and Portfolio Management Services."\cite{magicQuadrantCloud}.\par
 In this marketScope we have small, midsize and large providers offering on-premises and/or cloud-hosted PPM applications and they are evaluated considering their ability to support large-enterprise IT departments. Consequently, providers with strong positive and positive ratings are suitable for supporting very large to large deployments and some of the ones rated as strong and promising are more suitable for midsize organizations.\par
-In table 1 we can see the evaluation criteria for this research, as well as the weights for each criteria. A more detailed evaluation criteria can be consulted in \cite{MarketScopePPM}. In figure 13 is presented the marketScope for IT Project and Portfolio Management Software Applications. An analysis for each product/service in available in the MarketScope document \cite{MarketScopePPM}.
+In Table 1 we can see the evaluation criteria for this research, as well as the weights for each criteria. A more detailed evaluation criteria can be consulted in \cite{MarketScopePPM}. In Figure 13 is presented the marketScope for IT Project and Portfolio Management Software Applications. An analysis for each product/service in available in the MarketScope document \cite{MarketScopePPM}.
 Considering the MarketScope results presented, we can see that the solutions considered for analysis in the Gartner Magic Quadrant obtained a positive or strong positive rating in the MarketScope research. We can conclude this providers, despite being leaders in the PPM market, also provide products/services that are flexible and adaptable to emerging markets with constant changes in requirements.
 
 
@@ -467,7 +467,7 @@ Market Responsiveness and Track Record & High \\ \hline
 As stated by Forrester \cite{forresterWavePPM}, \textit{``Agile development disrupts operations and governance processes such as project/program portfolio management (PPM). That disruption drives a bifurcation in the tools market \- Traditional PPM doesn't suit the lighter-weight/lean governance processes that Agile projects require.''}. Considering this bifurcation, Forrester performed a 68-criteria evaluation of PPM vendors identifying the 10 most significant ones, comparing them  considering market's bifurcation and its constantly change.\par
 This research was performed considering two Forrester Wave Models. As defined by Forrester in \cite{forresterWavePPM}, \textit{``Above-the-line vendors serve enterprises primarily interested in portfolio planning, with linkage to tactical work planning and execution. Below-the-line vendors support enterprises seeking immediate help with planning, execution, and work management.''}.\par
 The vendors 68-evaluation criteria are grouped in three high-level groups: Current offering (deployment options, global support, and features for top-down portfolio planning or work-driven execution.), Strategy (product strategy, deployment options, support, and pricing) and Market Presence (revenue growth, financial strength, sales and support services, and the ability to support global implementations).\par
-The 10 vendors were selected following the vendor's selection criteria presented in figure 14. Information about the products offered by this vendors are available in figure 15.\par
+The 10 vendors were selected following the vendor's selection criteria presented in Figure 14. Information about the products offered by this vendors are available in Figure 15.\par
 
 
 \begin{figure}[h!]
@@ -486,7 +486,7 @@ The 10 vendors were selected following the vendor's selection criteria presented
 \end{minipage}
 \end{figure}
 
-In figure 16 we can see the Forrester Wave for Above-The-Line Project/Program Portfolio Management and in figure 17 the detailed scores by high-level criteria. HP, CA Technologies, Planview, and Daptiv are leaders for this market, being followed by Microsoft, Planisware, Rally, AtTask, and Clarizen that offers competitive solutions, with less strategic alignment capabilities than the leaders group. GenSight has good and solid functionalities, some of them exceeding the leaders ones, but takes a much specialized approach for portfolio management, obtaining a very low score on strategy criteria.\par
+In Figure 16 we can see the Forrester Wave for Above-The-Line Project/Program Portfolio Management and in Figure 17 the detailed scores by high-level criteria. HP, CA Technologies, Planview, and Daptiv are leaders for this market, being followed by Microsoft, Planisware, Rally, AtTask, and Clarizen that offers competitive solutions, with less strategic alignment capabilities than the leaders group. GenSight has good and solid functionalities, some of them exceeding the leaders ones, but takes a much specialized approach for portfolio management, obtaining a very low score on strategy criteria.\par
 Considering the leaders group, HP's strategy for integrated portfolio management and delivery makes it a Leader while CA Technologies offers robust analytics at transactional and strategic levels. Analytics and integration are the best qualities for Planview and Daptiv's functional strength on multiple fronts makes it stand out.\par
 
 
@@ -508,7 +508,7 @@ Considering the leaders group, HP's strategy for integrated portfolio management
 
 
 
-In figure 18 we can see the Forrester Wave for Below-The-Line Project/Program Portfolio Management and in figure 19 the detailed scores by high-level criteria. HP, Planview, and CA Technologies are clearly the big leaders, proving good features on Agile planning, resource management and reporting support. Microsoft, Rally, and Daptiv are also leaders, but with lower scores on current offering and strategy criteria groups. AtTask, Clarizen, and Planisware offer competitive solutions facing leaders solutions, but are designed for different types of work environments. GenSight solution is too much strategic planning oriented, making it only a contender for leaders and strong performers\par
+In Figure 18 we can see the Forrester Wave for Below-The-Line Project/Program Portfolio Management and in Figure 19 the detailed scores by high-level criteria. HP, Planview, and CA Technologies are clearly the big leaders, proving good features on Agile planning, resource management and reporting support. Microsoft, Rally, and Daptiv are also leaders, but with lower scores on current offering and strategy criteria groups. AtTask, Clarizen, and Planisware offer competitive solutions facing leaders solutions, but are designed for different types of work environments. GenSight solution is too much strategic planning oriented, making it only a contender for leaders and strong performers\par
 Considering the leaders group, HP Project Management provides the best solution in terms of managing various types of projects from traditional to Agile. Planview places its emphasis on pipeline management, resource planning, and reporting. CA Clarity PPM provides the most comprehensive planning solutions for project and work management while Microsoft EPM is the best project-planning tool at the desktop level. Rally has an outstanding performance as agile project management tool. Daptiv provides interesting functionalities on project and work management.\par
 
 \begin{figure}[th!]
@@ -535,7 +535,7 @@ To assess the available market solutions for IT Service Support Management tools
 
 This Magic Quadrant provides a precious support on ITSM tools analysis for professionals in IT Service Management. ITSSM tools help on management processes of IT services delivered by the organization, automatizing the tasks and workflows for quality IT services delivery to the business.\par
 As stated by Gartner in \cite{magicQuadrantITSM}, \textit{``the market for ITSSM tools is segmented according to the vendors' abilities to provide strong ITSSM capabilities and high levels of ease of integration with broader IT operations management functionalities.''}. Therefore, we can have basic, intermediate and advance vendors considering its ability to integrate with third-party IT Operations Management solutions and the set of ITSM functionalities. Each organization should analyze its own Infrastructure and Operations (I\&O) maturity level and choose an adequate solution. Basic or intermediate vendors are suitable for low maturity I\&O organizations while advance vendors are better option for the high maturity ones.\par
-In figure 20 we have the Magic Quadrant for IT Service Support Management Tools from August 2014, and in figure 21 and 22 we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
+In Figure 20 we have the Magic Quadrant for IT Service Support Management Tools from August 2014, and in Figure 21 and 22 we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
 
 \begin{figure}[h!]
 \centering
@@ -591,7 +591,7 @@ For product capabilities ratings, Gartner uses the following capabilities:
 \item Product Setup and Complexity
 \end{itemize}
 
-From figure 23 to figure 27 we have the products or services score for each use case considered. As we can see, for Low to Medium Maturity use case, Cherwell and EasyVista solutions are the one that have the higher score, presenting good incident and problem management capabilities, high ease-of-use levels, and out-of-the-box best-practice capabilities. For the all other use cases, ServiceNow and BMC solutions lead the market, providing good scores for all the desired capabilities on an ITSM tool.\par
+From Figure 23 to Figure 27 we have the products or services score for each use case considered. As we can see, for Low to Medium Maturity use case, Cherwell and EasyVista solutions are the one that have the higher score, presenting good incident and problem management capabilities, high ease-of-use levels, and out-of-the-box best-practice capabilities. For the all other use cases, ServiceNow and BMC solutions lead the market, providing good scores for all the desired capabilities on an ITSM tool.\par
 More detailed information on each product or service performance on this evaluation can be consulted in \cite{GartnerCriticalCapabilities}.
 
 
@@ -641,7 +641,7 @@ As stated by Forrester in \cite{forresterWaveITSM}, \textit{``How an IT or busin
 
 The vendors 30-evaluation criteria are grouped in three high-level groups: Current offering (client feedback, scope of predefined service, breadth of offering, availability and resiliency, security and compliance, upgradability and services activation time), Strategy (customer experience, digital disruption, big data and mobile mind shift) and Market Presence (number of enterprise customers, corporate profitability and ITSM SaaS growth).\par
 Considering the features and functionality assessment of ITSM SaaS Vendors, the main core areas are: enabling of the most commonly adopted ITSM capabilities (incident, service request, problem, change, knowledge, service-level, and configuration management), the configuration management database (CMDB) or better service information system (SIS), a service portal (or exchange) with self-service capabilities and enabling of social, mobility, and automation capabilities.\par
-For this evaluation were considered 10 vendors, selected following the vendor selection criteria presented in figure 28. Information about the products offered by this vendors are available in figure 29.\par
+For this evaluation were considered 10 vendors, selected following the vendor selection criteria presented in Figure 28. Information about the products offered by this vendors are available in Figure 29.\par
 
 \begin{figure}[h!]
 \centering
@@ -656,8 +656,8 @@ For this evaluation were considered 10 vendors, selected following the vendor se
 \caption{Top 10 selected vendors. Extracted from \cite{forresterWaveITSM}.}
 \end{figure}
 
-In figure 30 we can see the Forrester Wave: ITSM SaaS Delivery Capabilities for Q3 2014 and in figure 31 the detailed scores by high-level criteria. SysAid Technologies, Cherwell Software and ServiceNow are leaders for this market while all the other vendors follows them, being rated as strong performers. The leaders show high ITSM SaaS delivery capabilities and stand apart in customer feedback. While the strong performers vendors present good results for some criteria, they lack on other ones, making them a less complete solution for the ITSM Market\par
-All the leaders supply solutions are aimed for all markets, making the difference stand only on specific features or details of each solution. Customers should conduct a detailed analysis to the detailed scores in figure 30 to conclude what is the best solution for a given criteria type.\par
+In Figure 30 we can see the Forrester Wave: ITSM SaaS Delivery Capabilities for Q3 2014 and in Figure 31 the detailed scores by high-level criteria. SysAid Technologies, Cherwell Software and ServiceNow are leaders for this market while all the other vendors follows them, being rated as strong performers. The leaders show high ITSM SaaS delivery capabilities and stand apart in customer feedback. While the strong performers vendors present good results for some criteria, they lack on other ones, making them a less complete solution for the ITSM Market\par
+All the leaders supply solutions are aimed for all markets, making the difference stand only on specific features or details of each solution. Customers should conduct a detailed analysis to the detailed scores in Figure 30 to conclude what is the best solution for a given criteria type.\par
 
 
 \begin{figure}[h]
