changes on all document. almost ready

--- a/report.tex
+++ b/report.tex
@@ -45,7 +45,7 @@
 
 \begin{document}
 
-\title{Project Management and Maintenance on Information Systems Administration}
+\title{Project Management and Maintenance on Information Systems}
 \subtitle{Diogo Pinto - n\textordmasculine 69905}
 \author{Diogo.Reis.Pinto@tecnico.ulisboa.pt}
 \institute{Instituto Superior T\'{e}cnico}
