--- a/sections/architecture.tex
+++ b/sections/architecture.tex
@@ -13,12 +13,12 @@ As long as this project is aligned with a real-case scenario for an organization
 
 \subsection{Real-case Scenario}
 
-The real-case organization scenario will provide constraints and assumptions for this project, made available by the stakeholders. Being so, some design decisions were made considering specific requirements from this scenario.\par
+The real-case organization scenario will provide constraints and assumptions for this project, made available by the organization's stakeholders. Being so, some design decisions were made considering specific requirements from this scenario.\par
 We are dealing with an organization from the utilities sector of Business (Energy), composed by a unique administration for Applications (software) area. This administration will receive two types of requests: project execution and evolving maintenance requests.\par
 Considering the stakeholders for this project, we have two types: Internal and External. Considering internal stakeholders, we have the Business area, composed by the organization administration (Sponsor of this project), the financial and logistic departments, and the Technology area, composed by the Information Systems department (Project execution and Maintenance departments). Considering the external stakeholders, we have the third-parties responsible for project implementation, suppliers, consumers and regulatory entities.\par
 Project Execution department will outsource project implementation to a third-party but internally will maintain processes for project management, independent from the third-party. Evolving maintenance requests are filtered by a Help-Desk service, Wherefore only the major changes requests arrive to the evolving maintenance department.\par
 A project only enters in production phase after approval from the maintenance department. When in production phase, project belongs to the maintenance department. It can, accordingly with a strategical plan previously defined, outsource the maintenance's implementation, being only responsible for its management.\par
-This real-case scenario will allow us to extract some requirements and also take design decisions accordingly to stakeholders' needs and concerns, deciding which processes must be included in the processes architecture and the ones we should not focus, to reduce unnecessary complexity.\par
+This real-case scenario will allow us to extract some requirements and also take design decisions accordingly to organization's stakeholders' needs and concerns, deciding which processes must be included in the processes architecture and the ones we should not focus, to reduce unnecessary complexity.\par
 
 
 \subsection{Process Architecture}
@@ -31,7 +31,7 @@ We are considering the use of BPMN 2.0 (Business Process Model and Notation) for
 
 \subsubsection{Processes definition}
 
-Using an interview approach with the stakeholders for a more deeper analysis on the problem scope, we defined the areas of interest we need to cover. This areas can change during project execution phases, since requirements are volatile and can be changed. Also, more areas can be covered in the future, if we consider it brings an added value for this architecture.\par
+Using an interview approach with the organization's stakeholders for a more deeper analysis on the problem scope, we defined the areas of interest we need to cover. This areas can change during project execution phases, since requirements are volatile and can be changed. Also, more areas can be covered in the future, if we consider it brings an added value for this architecture.\par
 In Figure 32 we can observe the processes of interest for this project highlighted from the ISO/IEC 12207 international standard. As explained before, processes directly related to governance areas are not considered for this project due to its increased complexity. As consequence, Agreement processes and Organizational Project-Enabling processes are outside the scope for this project.\par
 Technical Processes and Software Implementation processes are also not considered in the scope, based on the requirements presented by the stakeholders and the organization scenario provided. As stated in section 7.1, we will assume these processes will be either outsourced, or managed by the organization according to already defined processes for that purpose.\par
 Software Reuse Processes are also outside the scope of this project. It is a shared opinion of stakeholders that this processes are not related to this project's problem and would only increase its complexity without adding any value.\par
@@ -48,7 +48,7 @@ Regarding Project processes, and accordingly to the concerns extracted from the 
 Apart from processes presented by ISO/IEC 12207, the stakeholders presented specific concerns regarding processes on Capacity Management, Issues Management, Financial Management and Document Management. They need to be taking in account on this project's scope considering stakeholders' needs.\par
 Capacity Management, as stated in \cite{itilSD}, ``ensure that cost-justifiable IT capacity in all areas of IT always exists and is matched to the current and future agreed needs of the business, in a timely manner.''. Deals with performance achievement and capacity availability, considering resources and services itself. It tries to balance costs against resources needed and supply against demand.\par
 The main areas are Business Capacity Management (requirements for service and IT infrastructure), Service Capacity Management (performance and capacity management of IT services operation) and Component Capacity Management (performance, capacity and utilization management of individual IT technology components).\par
-Issues Management is the process of identifying and resolving issues, as staff, suppliers, technical or material problems. Many times confused with risks, issues have a more unpredictable profile. They can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
+Issues Management is the process of identifying and resolving issues, as staff, suppliers, technical or material problems. Many times confused with risks, they can arise from project processes with no warning or no expectation at all. Most organizations find difficult to manage issues from an effectively manner and many times it a process that is not implemented across the complete organization, making more difficult its resolution.\par
 Financial Management, as stated in \cite{itilSS}, ``provides the business and IT with the quantification, in financial terms, of the value of IT Services, the value of the assets underlying the provisioning of those services, and the qualification of operational forecasting''. Core areas for IT Financial Management are Budgeting (Expenditures planning and controlling), IT accounting (Cost analysis on IT services providing) and Charging (Costs assignment to IT services provided). Financial Management is a complex area and we need a more deeper analysis on its importance for our architecture, in order to remove unnecessary complexity.\par
 Documentation Management corresponds to an area that deals with all documentation concerns on an organization, from technical to project management documentation. This area groups processes for plan, production, tracking and communication of documents produced by the organization in project and maintenance contexts. This processes are also related to the supporting artifacts we want to develop.\par
 In Table 2 we present the processes we will consider for this project and a description of some activities each process implements.
@@ -61,7 +61,7 @@ In Table 2 we present the processes we will consider for this project and a desc
 \textbf{Processes} & \multicolumn{1}{c|}{\textbf{Description}} \\ \hline
 \textbf{Project Planning} & \begin{tabular}[c]{@{}l@{}}Scope and goals definition;\\ Requirements establishment;\\ Activities and deliverables identification;\\ Schedule definition;\\ Resources identification;\\ Responsibilities assignment;\\ Quality, Risk and Cost Analysis;\end{tabular} \\ \hline
 \textbf{Project Assessment and Control} & \begin{tabular}[c]{@{}l@{}}Project monitoring;\\ Project control;\\ Project assessment;\end{tabular} \\ \hline
-\textbf{Decision Management} & \begin{tabular}[c]{@{}l@{}}Decision-Making strategy definition;\\ Alternative Courses of action definition;\\ Course of action identification;\\ Decision analysis;\\ Decision tracking;\end{tabular} \\ \hline
+\textbf{Decision Management} & \begin{tabular}[c]{@{}l@{}}Decision Planning;\\ Decision analysis;\\ Decision tracking;\end{tabular} \\ \hline
 \textbf{Risk Management} & \begin{tabular}[c]{@{}l@{}}Risk Management planning;\\ Risk Profile Management;\\ Risk Analysis;\\ Risk Treatment;\\ Risk Monitoring;\\ Risk Management process evaluation;\end{tabular} \\ \hline
 \textbf{Capacity Management} & \begin{tabular}[c]{@{}l@{}}Capacity Plan definition;\\ Performance Monitoring;\\ Performance Analysis;\\ Performance tuning;\end{tabular} \\ \hline
 \textbf{Issues Management} & \begin{tabular}[c]{@{}l@{}}Issue Identification;\\ Issue Prioritization;\\ Issue Resolution;\\ Issue Communication;\end{tabular} \\ \hline
@@ -110,7 +110,7 @@ Our objective is to use only the important knowledge from sections 4 and 5 for t
 
 \subsubsection{Processes Supporting artifacts}
 
-Considering the processes architecture we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will provide all artifacts needed, clearly defining its purpose, content and participants.\par
+Considering the processes architecture we want to develop, we need some artifacts to support this processes, namely communication and decisions artifacts that will allow us to support the activities' inputs and outputs. For this, we will identify all artifacts needed, clearly defining its purpose, content and participants.\par
 This artifacts will be defined during the designing of the process architecture. The frameworks and standards previously presented define some of them, being our work to address new artifacts that are not already covered and adapt others to better suit to our objectives.\par
 
 \subsubsection{Responsibility Structure}
@@ -121,7 +121,7 @@ For designing this responsibility structure we will consider the work already do
 \subsection{Logical Application Architecture}
 
 A proposal for a logical application architecture is one of the objectives of this project, being important to support the processes architecture. To achieve this, we evaluated a set of PPM and ITSM solutions available in the market with the objective of achieving a proposal of applications that can be a part of this architecture.\par
-We will only consider proprietary solutions, due to explicit requirements from the stakeholders. This was a precondition that we did not take in account in the state of the art on section 6 but that in this phase will restrict our PPM and ITSM solutions' proposal.\par 
+We will only consider proprietary solutions, due to explicit requirements from the organization's stakeholders. This was a precondition that we did not take in account in the state of the art on section 6 but that in this phase will restrict our PPM and ITSM solutions' proposal.\par 
 For evaluation purposes, we used Gartner and Forrester research, presented in section 6, that allow us to independently evaluate how these tools stand a position in the PPM and ITSM Market and also what are the solutions more complete in terms of features and capabilities.\par
 In this section we will present the solutions we consider the best for our objectives, being part of a proposal for the project's stakeholders. After deciding what solution we will consider for this project, we need to design a logical application architecture, describing how processes are supported and integrated.\par
 
