--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -15,7 +15,7 @@ Our choice is centered in three frameworks we consider the most relevant for thi
 
 One important concept to define is the difference between IT Governance and IT management. They are many times confused and some authors already tried to explain the difference between the two concepts.\par
 Considering the definition given in \cite{ITGovAndMech}, \textit{``IT Management is focused on the internal effective supply of IT services and products and the management of present IT operations. IT Governance in turn is much broader, and concentrates on performing and transforming IT to meet present and future demands of the business (internal focus) and the business' customers (external focus).''}.\par
- By the COBIT 5 view for this question \cite{2012cobit}, there is a \textit{``clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. it sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives.￼On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.''}\par
+ By the COBIT 5 view for this question \cite{2012cobit}, there is a \textit{``clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. It sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives. On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.''}\par
 
 
  Taking in account both definitions, we can conclude that IT Governance has a bigger dimension that IT Management, but both need to be related and complementary to achieve success inside an organization. It is not possible for an organization to have well defined and matured management processes that are no related to governance aspects, but governance needs management to achieve goals and objectives settled to achieve success.
@@ -78,7 +78,7 @@ Currently on version 1.3, it defines areas of interest that group collections of
 \end{itemize}
 
 For this areas of interest, CMMI defines 16 core process areas, covering processes that are fundamental to improve the organization's processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement.\par
-CMMI supports two types of improvement paths, depending on the organization objectives. One is used for the organization to improve processes related to a specific process area, named the continuous representation, and the other one is used for organizations to improve a set of relating processes by incrementally consider sets of process areas, named the staged representation. As stated by CMMI, the continuous representation will allow to achieve capability levels and the staged representation will achieve maturity levels.\par
+CMMI supports two types of improvement paths, depending on the organization objectives. One is used for the organization to improve processes related to a specific process area, named the continuous representation, and the other one is used for organizations to improve a set of relating processes by incrementally consider sets of process areas, named the staged representation. As stated by CMMI, the continuous representation will allow to achieve maturity levels and the staged representation will achieve capability levels\par
 For the staged representation, the following capability levels are defined:
 
 \begin{itemize}
@@ -310,7 +310,7 @@ In Figure 7, we can observe the purposed framework by ISO 31000:2009, used to im
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.6\textwidth]{img/ISO31000RiskProcesses.png}
-\caption{ISO 31000:2009 Risk Management Processes. Extracted from \cite{ISO31000}.}
+\caption{ISO 31000:2009 Risk Management Processes. Adapted from \cite{ISO31000}.}
 \end{figure}
 
 As confirmed by ISO in this standard, it cannot be used for certification purposes, in the way it doesn't provide guidance for audit programmes, but can be used to compare the risk management processes of the organization with international standard benchmarks.\par
